# nova-hub

./: .gitignore  FRAMEWORK_DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  STATUS_DONE.md  STATUS_TODO.md  pyproject.toml
agents/: coder.md  distiller.md  planner.md  qa.md  reviewer.md
config/: framework_preferences.yaml  models.json
config/pipelines/: full.json
knowledge/lessons/: test-v1-1.md  test-v1-2.md
nova/: __init__.py  agent.py  cli.py  config.py  models.py  paths.py  prompt.py  runner.py  session.py  state.py  transitions.py
